--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<meta http-equiv="refresh" content="0; URL='https://obobs-kapa.github.io/dog/login'" />
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; URL='https://obobs-kapa.github.io/dog/login'" />
+    <meta http-equiv="refresh" content="0; URL='https://obobs-kapa.github.io/teste/login'" />
   <title>Página em Branco</title>
 </head>
 <body>
